--- a/css/flags-layout.css
+++ b/css/flags-layout.css
@@ -80,6 +80,7 @@
   /* border-bottom: 1px solid #ddd; */
   /* border-radius: 3px 3px 0 0; */
   font-weight: bold;
+  text-align: center;
   line-height: 1.5em;
   padding: 0.5em 0.75em; }
 
